--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Your browser does not support the audio element.
 
 
 <a href="outlawkaraoke.html">
-  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; color:lavenderblush;">Outlaw Karaoke</h3>
+  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; padding:33px; color:lavenderblush;">Outlaw Karaoke</h3>
 </a>
 
 
