--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="css/themes/loading-indicator.css">
  --->
 <body style="background-color:black">
-<img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
+<img alt="Ivan Dogwood" src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
 <p style="margin-top:42px;text-align: center;color:white;font-family:courier;font-size:large;"> Your own sophisticated low brow blues lick-laden, fuzz-covered, Appalachian soul-powered, original rock & roll guitar/drums duo. <br><br> Award-winning songwriting. </p>
 
 <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR DATES</h3>
