--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <style>
   @font-face {
     font-display: block;
-    font-family: Roboto;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff) format("woff")
+    font-family: Forum;
+    src: "/Fonts/Forum.ttf")
   }
 
   @font-face {
@@ -47,7 +47,7 @@ Your browser does not support the audio element.
 
 
 <a href="outlawkaraoke.html">
-  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; padding:33px; color:lavenderblush;">Outlaw Karaoke</h3>
+  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; padding:33px; font-family:forum; color:lavenderblush;">Outlaw Karaoke</h3>
 </a>
 
 
